# ultimate-asepharyana-tech-rust-auth

./: .gitignore  AGENTS.md  Cargo.toml  moon.yml
.claude/learn/: failures.jsonl
.codegraph/: .update-debounce  graph.db  graph.db-shm  graph.db-wal
docs/: auth-design.md
docs/auth-design/: advanced-techniques.md  authorization-flow.md  caching-layer.md  controllers-and-views.md  core-models-and-security.md  data-class-diagram.md  enterprise-architecture-diagram.md  goals.md  layered-architecture.md  middleware-components.md  scope-and-complexity.md
migrations/: 20250101000001_initial_schema.sql
src/: main.rs
src/bootstrap/: mod.rs
src/modules/auth/: controller.rs  entity.rs  mod.rs  repository.rs  route.rs  schema.rs  service.rs
src/modules/user/: controller.rs  entity.rs  repository.rs  route.rs  schema.rs  service.rs
src/shared/: mod.rs
src/shared/config/: mod.rs
src/shared/database/: mod.rs
src/shared/errors/: mod.rs
src/shared/middlewares/: auth.rs  cors.rs  metrics.rs  mod.rs  rate_limit.rs  tracing.rs
src/shared/state/: mod.rs
src/shared/utils/: jwt.rs  password.rs  validation.rs
