[package]
name = "rust-auth"
version = "0.1.0"
edition = "2024"
description = "Enterprise IAM and authentication service with modular MVC architecture"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression", "request-id"] }
tower = { version = "0.5", features = ["util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# UUID & Time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Cache
redis = { version = "0.28", features = ["tokio-rustls-comp"] }
deadpool-redis = "0.20"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async
futures = "0.3"

# Regex
regex = "1"

# Observability
prometheus = { version = "0.13", features = ["process"] }
axum-prometheus = "0.7"

[dev-dependencies]
http-body-util = "1"
tower-test = "0.5"
